fixed overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 /* Home Page Links CSS*/
 .homepage-links {
-  margin-top: 1%;
-  width: 100%;
+  /* margin-top: 1%; */
+  width: 95%;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -12,10 +12,11 @@
 .home-icon {
   height: 2.4rem;
   width: 2.4rem;
-  transition: all 0.4s ease-in-out;
 }
 
 .home-icon:hover {
+  height: 2.4rem;
+  width: 2.4rem;
   filter: invert(77%) sepia(29%) saturate(4733%) hue-rotate(305deg)
     brightness(113%) contrast(85%);
 }
